--- a/lab1/lab.ipynb
+++ b/lab1/lab.ipynb
@@ -77,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1b395f522c0>"
+       "<matplotlib.image.AxesImage at 0x1a79eb32110>"
       ]
      },
      "execution_count": 4,
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "captura = cv2.VideoCapture(path)\n",
+    "ret, prev = captura.read()\n",
+    "prev = cv2.cvtColor(prev, cv2.COLOR_BGR2GRAY)\n",
+    "while (captura.isOpened()):\n",
+    "  ret, imagen = captura.read()\n",
+    "  if ret == True:\n",
+    "    gray = cv2.cvtColor(imagen, cv2.COLOR_BGR2GRAY)        \n",
+    "    frame_diff = cv2.absdiff(gray, prev)     \n",
+    "    ret, thresh = cv2.threshold(frame_diff, 35, 255, cv2.THRESH_BINARY)\n",
+    "\n",
+    "    prev = gray.copy()       \n",
+    "    \n",
+    "    kernel = np.ones((5,5),np.uint8)\n",
+    "    dilated = cv2.dilate(thresh, kernel, iterations = 1)\n",
+    "\n",
+    "    dilated = dilated.astype(np.uint8)\n",
+    "\n",
+    "    contours, _ = cv2.findContours(dilated, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "    for cnt in contours:\n",
+    "      area = cv2.contourArea(cnt)\n",
+    "      if area > 1000:\n",
+    "        cv2.drawContours(imagen, [cnt], 0, (0,255,0), 2)\n",
+    "\n",
+    "    cv2.imshow('original',imagen)\n",
+    "    if cv2.waitKey(30) == ord('s'):\n",
+    "      break\n",
+    "  else: break\n",
+    "captura.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,6 +450,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    prev = gray.copy()       \n",
+    "    \n",
+    "    kernel = np.ones((5,5),np.uint8)\n",
+    "    dilated = cv2.dilate(thresh, kernel, iterations = 1)\n",
+    "\n",
+    "    dilated = dilated.astype(np.uint8)\n",
+    "\n",
+    "    contours, _ = cv2.findContours(dilated, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "    for cnt in contours:\n",
+    "      area = cv2.contourArea(cnt)\n",
+    "      if area > 1000:\n",
+    "        cv2.drawContours(imagen, [cnt], 0, (0,255,0), 2)\n",
+    "\n",
+    "    cv2.imshow('original',imagen)\n",
+    "    if cv2.waitKey(30) == ord('s'):\n",
+    "      break\n",
+    "  else: break\n",
+    "captura.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    kernel = np.ones((5,5),np.uint8)\n",
+    "    dilated = cv2.dilate(thresh, kernel, iterations = 1)\n",
+    "\n",
+    "    dilated = dilated.astype(np.uint8)\n",
+    "\n",
+    "    contours, _ = cv2.findContours(dilated, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "    for cnt in contours:\n",
+    "      area = cv2.contourArea(cnt)\n",
+    "      if area > 1000:\n",
+    "        cv2.drawContours(imagen, [cnt], 0, (0,255,0), 2)\n",
+    "\n",
+    "    cv2.imshow('original',imagen)\n",
+    "    if cv2.waitKey(30) == ord('s'):\n",
+    "      break\n",
+    "  else: break\n",
+    "captura.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -408,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0rc2"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
